--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Hello GIT! :)</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi quasi consequuntur, nesciunt provident quod maiores laudantium ea unde, autem laboriosam neque odio sunt qui quos voluptas officiis nostrum quas adipisci!</p>
 </body>
 </html>
